--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -58,7 +58,7 @@ button:hover {
     color: #ffffff;
 }
 
-#workspaces button:hover {
+#workspaces button:hover, #pulseaudio:hover, #custom-notification:hover {
     background: rgba(0, 0, 0, 0.2);
 }
 
@@ -76,6 +76,7 @@ button:hover {
     box-shadow: inset 0 -3px #ffffff;
 }
 
+#custom-notification,
 #clock,
 #battery,
 #cpu,
